syntax = "proto3";

option csharp_namespace = "CardStorageServiceProtos";

//package CardStorageServiceProtos;

service ClientService{	
rpc Create (CreateClientRequest) returns (CreateClientResponce);
}

service CardService{
rpc GetByClientId (GetByClientIdRequest) returns (GetByClientIdResponce);
}

message CreateClientRequest{
	string SurName =1;
	string FirstName =2;
	string Patronymic =3;
}

message CreateClientResponce{
	int32 ClientId = 1;
}

message GetByClientIdRequest{
	int32 ClientId = 1;
}


message GetByClientIdResponce{
	repeated Card Cards =1;
}

message Card{
	string CardNo =1;
	string Name =2;
	string CVV2=3;
	string ExpDate=4;
}
